<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">MyEvents</string>

    <string name="twoPointSep">": "</string>
    
    <string name="syncLabel">MyEventsAdapter</string>
    
    <string name="mainVPTabFutureEvents">Future events</string>
    <string name="mainVPTabPastEvents">Past events</string>
    <string name="mainVPTabOwnedGroups">Owned groups</string>
    <string name="mainVPTabOtherGroups">Other groups</string>
    
    <string name="menu_settings">Settings</string>
    <string name="account">Account</string>
    <string name="user">User</string>
    <string name="event">Event</string>
    <string name="description">Description</string>
    
    <string name="createAccount">Create account</string>
    <string name="addUser">Add user</string>
    <string name="reallyAddUser">Are you sure you want to add the user?</string>
    
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="password2">Repeat password</string>

    <string name="LoginButton">Login</string>
    <string name="loginFailedMessage">Username or Password not correct, please try again</string>
    <string name="loginNewUserMsg"><u>Create new account</u></string>
    <string name="loginConfirmedMsg">Login completed correctly</string>
    <string name="LoginMessage">To perform the login fill the following fields</string>
    
    <string name="lgnNewConfirmedMsg">New account created correctly</string>
    <string name="lgnNewPasswordsDiffers">ATTENTION: passwords must be equals</string>
    <string name="lgnNewBtnCreateUser">Create new account</string>
    <string name="lngNewLblCreateNewAccount">To create a new account fill following fields</string>
    <string name="lgnNewFailedMessage">ATTENTION: unable to create account</string>
    <string name="lgnNewUsernameExistMsg">ATTENTION: username already exist, try to change it</string>
    <string name="newEvent">New event</string>
    <string name="logout">Log out</string>
    <string name="about">About</string>

    <string name="networkFailedMessage">ATTENTION: Problems during network comunication</string>
    <string name="serverErrorMessage">ERROR: server had problems</string>
    <string name="databaseErrorMessage">ERROR: Unable to save data, verify your system</string>
    <string name="unexpectedErrorMessage">ERROR: Unexpected error occurred</string>
    <string name="usernameArleadyUsed">ATTENTION: USERNAME arleady used, try to change it</string>
    <string name="eventNameArleadyUsed">ATTENTION: event NAME arleady used, try to change it</string>
    <string name="needSelectAGroup">ATTENTION: you need to select a group</string>
    <string name="groupNameArleadyUsed">ATTENTION: group NAME arleady used, try to change it</string>
    <string name="accountArleadyAdded">ATTENTION: Account arleady prensent in the group</string>

    <string name="goToTheProgramForTheLogin">To create a nuew account open the App</string>
    
    <string name="synchronize">Synchronize</string>
    <string name="resetDb">Reset database</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="group">Group</string>
    <string name="date">Date</string>
    <string name="refreshLists">Refresh lists</string>
    <string name="reloadLists">Relaod lists</string>
    <string name="selectAGroup">Click to select a group</string>
    
</resources>