<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
	<item
		android:id="@+id/menuAdd"
		android:icon="@android:drawable/ic_menu_add"
		android:showAsAction="always"
		android:title="@string/add"/>
	<item
		android:id="@+id/menuSync"
		android:icon="@android:drawable/ic_menu_directions"
		android:showAsAction="always"
		android:title="@string/synchronize"/>
	<item
		android:id="@+id/menuLogOut"
		android:icon="@android:drawable/ic_menu_revert"
		android:showAsAction="never"
		android:title="@string/logout"/>
	<item
		android:id="@+id/about"
		android:icon="@android:drawable/ic_menu_info_details"
		android:showAsAction="never"
		android:title="@string/about"/>
	<item
		android:id="@+id/resetDb"
		android:showAsAction="never"
		android:title="@string/resetDb"/>
</menu>
